# pytest-html

./: pyproject.toml
pytest_html_cn/: plugin.py
pytest_html_cn/resources/: main.js  style.css
testing/: js_test_report.html  test_pytest_html.py
